--- a/pages/roteiros/roteirosPorto.html
+++ b/pages/roteiros/roteirosPorto.html
@@ -13,10 +13,10 @@
 
     <body>
         <header>
-            <a href="../index.html"><img src="../../assets/logo.png" alt="Logo Roteiros pelo Tejo"></a>
+            <a href="../../index.html"><img src="../../assets/logo.png" alt="Logo Roteiros pelo Tejo"></a>
 
             <nav>
-                <a href="../index.html">Home</a>
+                <a href="../../index.html">Home</a>
                 <div class="dropdown">
                   <a class="dropbtn">Destinos</a>
                   <div class="dropdown-content">
