--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <title>Roteiros pelo Tejo</title>
   <!-- Links de ligação: favicon e dois estilos externos-->
-  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../styles/globalstyle.css">
-  <link rel="stylesheet" href="../styles/homestyle.css">
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./styles/globalstyle.css">
+  <link rel="stylesheet" href="./styles/homestyle.css">
 </head>
 
 <body>
   <header>
-    <a href="index.html"><img src="../assets/logo.png" alt="Logo Roteiros pelo Tejo"></a>
+    <a href="index.html"><img src="./assets/logo.png" alt="Logo Roteiros pelo Tejo"></a>
     <nav>
       <a href="./index.html">Home</a>
       
@@ -25,20 +25,20 @@
       <div class="dropdown">
         <a class="dropbtn">Destinos</a>
         <div class="dropdown-content">
-          <a href="../pages/destinos/lisboa.html">Lisboa</a>
-          <a href="../pages/destinos/alentejo.html">Alentejo</a>
-          <a href="../pages/destinos/porto.html">Porto</a>
-          <a href="../pages/destinos/setubal.html">Setúbal</a>
+          <a href="./pages/destinos/lisboa.html">Lisboa</a>
+          <a href="./pages/destinos/alentejo.html">Alentejo</a>
+          <a href="./pages/destinos/porto.html">Porto</a>
+          <a href="./pages/destinos/setubal.html">Setúbal</a>
         </div>
       </div>
       
       <div class="dropdown">
         <a class="dropbtn">Roteiros</a>
         <div class="dropdown-content">
-          <a href="../pages/roteiros/roteirosLisboa.html">Lisboa</a>
-          <a href="../pages/roteiros/roteirosAlentejo.html">Alentejo</a>
-          <a href="../pages/roteiros/roteirosPorto.html">Porto</a>
-          <a href="../pages/roteiros/roteirosSetubal.html">Setúbal</a>
+          <a href="./pages/roteiros/roteirosLisboa.html">Lisboa</a>
+          <a href="./pages/roteiros/roteirosAlentejo.html">Alentejo</a>
+          <a href="./pages/roteiros/roteirosPorto.html">Porto</a>
+          <a href="./pages/roteiros/roteirosSetubal.html">Setúbal</a>
         </div>
       </div>
 
@@ -49,7 +49,7 @@
 
     <!-- Botão com evento para chamar a função que abre o menu ao clicá-lo-->
     <button class="menubtn" onclick="openMenu();">
-      <img src="../assets/menuIcon.svg" alt="Menu">
+      <img src="./assets/menuIcon.svg" alt="Menu">
     </button>
   </header>
   
@@ -57,14 +57,14 @@
     <!-- div container do slider da homepage-->
     <div id="slider">
       <figure>
-        <img src="../assets/img.ilustration.jpg" alt="Ilustração de Portugal">
-        <img src="../assets/lisboaDestino.png" alt="Imagem de Lisboa">
-        <img src="../assets/porto.png" alt="Imagem de Porto">
-        <img src="../assets/setubal.png" alt="Imagem de Setúbal">
+        <img src="./assets/img.ilustration.jpg" alt="Ilustração de Portugal">
+        <img src="./assets/lisboaDestino.png" alt="Imagem de Lisboa">
+        <img src="./assets/porto.png" alt="Imagem de Porto">
+        <img src="./assets/setubal.png" alt="Imagem de Setúbal">
       </figure>
       <button>
         <!-- Botão com link para interação no slider/banner-->
-        <a href="../pages/destinos/alentejo.html">Destino da semana</a>
+        <a href="./pages/destinos/alentejo.html">Destino da semana</a>
       </button>
     </div>
 
@@ -78,8 +78,8 @@
         </div>
         <!-- a tag figure define uma área de imagens no site-->
         <figure>
-          <img class="image principal" src="../assets/pt-lisboa1.jpg" alt="Vista de Lisboa">
-          <img class="image hover" src="../assets/lisboahover2.jpg" alt="Vista alternativa de Lisboa">
+          <img class="image principal" src="./assets/pt-lisboa1.jpg" alt="Vista de Lisboa">
+          <img class="image hover" src="./assets/lisboahover2.jpg" alt="Vista alternativa de Lisboa">
         </figure>
       </section>
       </div>
@@ -93,8 +93,8 @@
   
         <!-- animação imagens -->
         <figure>
-          <img class="image principal" src="../assets/pt-lisboa2.jpg" alt="Vista de Lisboa">
-          <img class="image hover" src="../assets/lisboahover3.jpg" alt="Vista alternativa de Lisboa">
+          <img class="image principal" src="./assets/pt-lisboa2.jpg" alt="Vista de Lisboa">
+          <img class="image hover" src="./assets/lisboahover3.jpg" alt="Vista alternativa de Lisboa">
         </figure>
       </section>
     </div>
@@ -122,13 +122,13 @@
 
   <footer>
       <div>
-        <img class="image-logo" src="../assets/logo-img.png" alt="Logo Roteiros pelo Tejo">
-        <img class="name-logo" src="../assets/logo-name.png" alt="Roteiros pelo Tejo">
+        <img class="image-logo" src="./assets/logo-img.png" alt="Logo Roteiros pelo Tejo">
+        <img class="name-logo" src="./assets/logo-name.png" alt="Roteiros pelo Tejo">
       </div>
       <p>Roteiros pelo Tejo @2024 Todos os direitos reservados</p>
   </footer>
 
   <!-- ligação externa com o arquivos js responsável pela interação da página-->
-  <script src="../scripts/main.js"></script>
+  <script src="./scripts/main.js"></script>
 </body>
 </html>
