--- a/pages/destinos/lisboa.html
+++ b/pages/destinos/lisboa.html
@@ -12,11 +12,11 @@
 
 <body>
   <header>
-    <a href="../index.html">
+    <a href="../../index.html">
       <img src="../../Assets/logo.png" alt="Logo Roteiros pelo Tejo">
     </a>
     <nav>
-      <a href="../index.html">Home</a>
+      <a href="../../index.html">Home</a>
       <div class="dropdown">
         <a class="dropbtn">Destinos</a>
         <div class="dropdown-content">
