--- a/pages/roteiros/roteirosAlentejo.html
+++ b/pages/roteiros/roteirosAlentejo.html
@@ -14,11 +14,11 @@
 
     <body>
         <header>
-            <a href="../index.html">
+            <a href="../../index.html">
                 <img src="../../assets/logo.png" alt="Logo Roteiros pelo Tejo">
             </a>
             <nav>
-                <a href="../index.html">Home</a>
+                <a href="../../index.html">Home</a>
                 <div class="dropdown">
                   <a class="dropbtn">Destinos</a>
                   <div class="dropdown-content">
