--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </div>
       </div>
 
-      <a href="sugestao.html">Sugestões</a>
-      <a href="favoritos.html">Favoritos</a>
-      <a href="sobreNos.html">Sobre nós</a>
+      <a href="./pages/">Sugestões</a>
+      <a href="./pages/favoritos.html">Favoritos</a>
+      <a href="./pages/sobreNos.html">Sobre nós</a>
     </nav>
 
     <!-- Botão com evento para chamar a função que abre o menu ao clicá-lo-->
