--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <a href="./pages/">Sugestões</a>
+      <a href="./pages/sugestao.html">Sugestões</a>
       <a href="./pages/favoritos.html">Favoritos</a>
       <a href="./pages/sobreNos.html">Sobre nós</a>
     </nav>
